@@ -14,20 +14,20 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 f6faa7ce15f863934760762548a57c421d62720d BUGS
-SHA1 6ddfc0f2e051184f31a89268eeeb88d87f0dd298 CHANGES
+SHA1 efb9a682050e13c68bb3d60241ba1774a7ddd405 CHANGES
 SHA1 e793c3c553c8985b88d6cd4bcf70918fedee311c CREDITS
 SHA1 1478a9491db7843cc30982149743f24b03c1900f INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 a68fb70adec2cba3c0b64e02d0def9a9be098b88 MANIFEST
 SHA1 de249d8ac8cd11950792792d310812ff96ada8e7 Makefile.PL
-SHA1 13895f9ab01d5b5ca0c81d7c488ae71a2052c5b2 NEW
+SHA1 2443b22c0cccf2a42c51be698bb816af8cca996f NEW
 SHA1 71aa07adda03523c48781ca46ecda9b6a9099e4f README
 SHA1 732b325ff45bc2fb03a186e35122d41690d77e0e TODO
 SHA1 c77e115a72bbc65c3303fb6ea33c9069b4a899e8 bench/str_cache.pl
 SHA1 e91d9b330267bcf83b6159df359c39bfa3181508 examples/dict.pl
 SHA1 d526aced1029ebf3ad0eeaae20a2bd752379177c examples/wordlist.txt
-SHA1 f688108efb313516c584388f8dee60342534849e lib/Math/String.pm
-SHA1 be18c41ba4debcc1dc79b6ef3f8ae5555146a675 lib/Math/String/Charset.pm
+SHA1 279f1e9490c2c48fc21b4f18472ab8f00846a56e lib/Math/String.pm
+SHA1 aef641b13bd0b79c7111c41854e34f76c986eabe lib/Math/String/Charset.pm
 SHA1 31f89b63dd4bd7e5aba685e857fa2d6f0bb3003f lib/Math/String/Charset/Grouped.pm
 SHA1 09354c1c7e51088925923df694218e13be55ac88 lib/Math/String/Charset/Nested.pm
 SHA1 94862f99e0356d4e5baa11bc143bc6273f4ed87e lib/Math/String/Charset/Wordlist.pm
@@ -37,18 +37,18 @@ SHA1 b0aa2e9810833109d12110cf39b2f54dcf5e3a53 t/setgpm.t
 SHA1 b3dee692c7c1ca982577c86f26ff8646fa23aa7e t/setnpm.t
 SHA1 0a02922a9d1f88e0675cab14b9018a7387956e9e t/setspm.t
 SHA1 c7194fc62f78853c9e3ab10d10fa1f5a65975a7e t/setwpm.t
-SHA1 60c26652d19f2ee060b34cfbff012ada24a48400 t/stringpm.t
+SHA1 2a42d034a5fb2e0ac5512d60cd109e779a7d295a t/stringpm.t
 SHA1 c72a656d3812edae252f657c14d305ff638e5da8 t/study.t
 SHA1 218befcfa05f8d1550c7c9067c81b6d01fefe4fd t/testlist.lst
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.0.6 (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBPpMljncLPEOTuEwVAQHLhQf+Ma2p/4NhfXIe0t+mx0lfXKxqZPo2FM4C
-1Gw/sFKNPMxqGfI+VmpD/Nq3eE2mQ+3lYX6+ekjqr8qEroF9NWVF2UmnOYVvQo9S
-jGPrL5rgSzMo2sZhW7FWCmz+eefSlMJxnHZcwzZdn03UXsjsrNlnxFgSDXwPlABp
-mUL3hl+MTzMKO1YFIhhaezglWQx1zkkxJ1lXU9O1iFNJS24eZoRUXlMARyV75H6K
-QNkKHvMQcsO+CI9ErbwyML+4pOkLKg9nlVTks3aRFbIBQiUxAl+zehfIV94/GTrX
-77lX9ZPjNWH+XXGo4if++xy8LH6+vvqwOvzfwYtN913+GuDQcLJ67g==
-=aWRK
+iQEVAwUBPpmskXcLPEOTuEwVAQEPNAf/UbpcLBKkA/FibcnsZFdG5HYEsxbzxea7
+U24KCQzMhBwachuDEAYgMpGazo+e6OuO2R7v02Lj01+RInaNehUmi3ZVnePs+T6H
+od3QCSni0Ktf1SDR3+9AZ7VjR+l5ploWPOqasPax/zqzxTmrTsdMl7muI4nQXIKb
+DStDIZkEr2VPaRp9tY87FK8Q/dG+GtEWoPxEEo8HQsWVa7XsOe+fPPf8SNGfJR4N
+e7lq06f7C3u5ugPaCp+KZeTRVH8fromkI3DOce6Ac2/ex1QDSRq1z+U0bm5jNNEj
+fuF7JZJsD2CupU9g4q8ujVhbCkVfc3iZuezcMwTP46cGQBLUSaQROQ==
+=H1UB
 -----END PGP SIGNATURE-----
